// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty array shows no exposure events 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-40 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-41"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-41"
            >
              New users only
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    <span
                      class="makeStyles-variation-55"
                    >
                      control
                    </span>
                    <span
                      class="makeStyles-default-53"
                    >
                       default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    60
                    %
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    <span
                      class="makeStyles-variation-55"
                    >
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    40
                    %
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-59"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-59"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-62"
            >
              <span
                class="makeStyles-monospace-63"
              >
                No exposure events defined
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Shows exposure events 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-40 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-41"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-41"
            >
              New users only
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-46"
                  >
                    <span
                      class="makeStyles-variation-44"
                    >
                      control
                    </span>
                    <span
                      class="makeStyles-default-42"
                    >
                       default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-46"
                  >
                    60
                    %
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-46"
                  >
                    <span
                      class="makeStyles-variation-44"
                    >
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-46"
                  >
                    40
                    %
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-48"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-48"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-51"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-52 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-50"
                >
                  test
                </span>
                <span
                  class="makeStyles-entry-49"
                >
                  prop1
                  : 
                  value1
                </span>
              </p>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`null shows no exposure events 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-40 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-41"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-41"
            >
              New users only
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
                  >
                    <span
                      class="makeStyles-variation-66"
                    >
                      control
                    </span>
                    <span
                      class="makeStyles-default-64"
                    >
                       default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
                  >
                    60
                    %
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
                  >
                    <span
                      class="makeStyles-variation-66"
                    >
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
                  >
                    40
                    %
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-70"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-73"
            >
              <span
                class="makeStyles-monospace-74"
              >
                No exposure events defined
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with all segments resolvable 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-27 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-28"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-28"
            >
              New users only
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-33"
                  >
                    <span
                      class="makeStyles-variation-31"
                    >
                      control
                    </span>
                    <span
                      class="makeStyles-default-29"
                    >
                       default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-33"
                  >
                    60
                    %
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-33"
                  >
                    <span
                      class="makeStyles-variation-31"
                    >
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-33"
                  >
                    40
                    %
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-35"
                  >
                    segment_1
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-35"
                  >
                    segment_3
                    <span
                      class="makeStyles-excluded-34"
                    >
                       excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-35"
                  >
                    segment_2
                    <span
                      class="makeStyles-excluded-34"
                    >
                       excluded
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-35"
                  >
                    segment_4
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-38"
            >
              <span
                class="makeStyles-monospace-39"
              >
                No exposure events defined
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with existing users allowed 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-14 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-15"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-15"
            >
              All users (new + existing)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span
                      class="makeStyles-variation-18"
                    >
                      control
                    </span>
                    <span
                      class="makeStyles-default-16"
                    >
                       default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    60
                    %
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span
                      class="makeStyles-variation-18"
                    >
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    40
                    %
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-22"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-22"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-25"
            >
              <span
                class="makeStyles-monospace-26"
              >
                No exposure events defined
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with no segment assignments 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-1 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-2"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-2"
            >
              New users only
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    <span
                      class="makeStyles-variation-5"
                    >
                      control
                    </span>
                    <span
                      class="makeStyles-default-3"
                    >
                       default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    60
                    %
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    <span
                      class="makeStyles-variation-5"
                    >
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-7"
                  >
                    40
                    %
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-9"
                  >
                    All 
                    locales
                     included
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-9"
                  >
                    All 
                    countries
                     included
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-12"
            >
              <span
                class="makeStyles-monospace-13"
              >
                No exposure events defined
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
